src/tab.zig

//! File selection / tab completion — replaces `joe/tab.c`.
//!
//! Faithful C-ABI Path A port of JOE tab completion (`cmplt_file`/`cmplt_file_in`/`cmplt_file_out`/`cmplt_command` + `menu_explorer`/`menu_jump`).

const std = @import("std");
const ptrdiff_t = c_long;

const F_DIR: c_int = 1;
const F_NORMAL: c_int = 2;
const F_EXEC: c_int = 4;
const PATH_QUOTE: c_int = 1;
const PATH_CMD: c_int = 2;
const PATH_EDIT: c_int = 4;
const PATH_SAVE: c_int = 8;
const S_IFMT: c_int = 0o170000;
const S_IFDIR: c_int = 0o040000;

pub extern fn printf(fmt: [*c]const u8, ...) c_int;
pub extern fn snprintf(buf: [*c]u8, n: c_ulong, fmt: [*c]const u8, ...) c_int;
pub extern fn getenv(name: [*c]const u8) [*c]u8;
pub extern fn free(p: ?*anyopaque) void;
pub extern fn malloc(n: c_ulong) ?*anyopaque;
pub extern fn memcpy(d: ?*anyopaque, s: ?*const anyopaque, n: c_ulong) ?*anyopaque;
pub extern fn memset(s: ?*anyopaque, c: c_int, n: c_ulong) ?*anyopaque;
pub extern fn strcmp(a: [*c]const u8, b: [*c]const u8) c_int;
pub extern fn strlen(s: [*c]const u8) c_ulong;
pub extern fn strcpy(d: [*c]u8, s: [*c]const u8) [*c]u8;
pub const off_t = i64;
pub const time_t = i64;
pub const ino_t = u64;
pub const mode_t = c_uint;
pub const struct_timespec_joe = extern struct {
    tv_sec: time_t = 0,
    tv_nsec: c_long = 0,
};
pub const struct_stat = extern struct {
    st_dev: c_uint = 0,
    st_mode: c_ushort = 0,
    st_nlink: c_ushort = 0,
    st_ino: ino_t = 0,
    st_uid: c_uint = 0,
    st_gid: c_uint = 0,
    st_rdev: c_uint = 0,
    _pad_rdev: c_uint = 0,
    st_atimespec: struct_timespec_joe = std.mem.zeroes(struct_timespec_joe),
    st_mtimespec: struct_timespec_joe = std.mem.zeroes(struct_timespec_joe),
    st_ctimespec: struct_timespec_joe = std.mem.zeroes(struct_timespec_joe),
    st_birthtimespec: struct_timespec_joe = std.mem.zeroes(struct_timespec_joe),
    st_size: i64 = 0,
    st_blocks: i64 = 0,
    st_blksize: c_int = 0,
    st_flags: c_uint = 0,
    st_gen: c_uint = 0,
    st_lspare: c_int = 0,
    st_qspare: [2]i64 = std.mem.zeroes([2]i64),
};
pub extern fn stat(path: [*c]const u8, buf: [*c]struct_stat) c_int;
pub const B = struct_b;
const struct_unnamed_1 = extern struct {
    next: [*c]B = null,
    prev: [*c]B = null,
};
const struct_unnamed_2 = extern struct {
    next: [*c]P = null,
    prev: [*c]P = null,
};
pub const struct_p = extern struct {
    link: struct_unnamed_2 = std.mem.zeroes(struct_unnamed_2),
    b: [*c]B = null,
    _pad0: [24]u8 = std.mem.zeroes([24]u8),
    byte: off_t = 0,
    line: off_t = 0,
    col: off_t = 0,
    xcol: off_t = 0,
    valcol: c_int = 0,
    end: c_int = 0,
    attr: c_int = 0,
    valattr: c_int = 0,
    owner: [*c][*c]P = null,
    tracker: [*c]const u8 = null,
};
pub const P = struct_p;
pub const struct_undo = opaque {};
pub const UNDO = struct_undo;
pub const struct_options = extern struct {
    _pad: [344]u8 = std.mem.zeroes([344]u8),
};
pub const OPTIONS = struct_options;
pub const struct_charmap = extern struct {
    next: ?*anyopaque = null,
    name: [*c]const u8 = null,
    type: c_int = 0,
    _pad_type: [4]u8 = std.mem.zeroes([4]u8),
    is_punct: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    is_print: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    is_space: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    is_alpha_: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    is_alnum_: ?*const fn (map: [*c]struct_charmap, c: c_int) callconv(.c) c_int = null,
    _pad: [2692]u8 = std.mem.zeroes([2692]u8),
};
pub const struct_b = extern struct {
    link: struct_unnamed_1 = std.mem.zeroes(struct_unnamed_1),
    bof: [*c]P = null,
    eof: [*c]P = null,
    name: [*c]u8 = null,
    _pad1: [36]u8 = std.mem.zeroes([36]u8),
    orphan: c_int = 0,
    count: c_int = 0,
    changed: c_int = 0,
    backup: c_int = 0,
    _pad_backup: [4]u8 = std.mem.zeroes([4]u8),
    undo: ?*UNDO = null,
    _pad_marks: [88]u8 = std.mem.zeroes([88]u8),
    o: OPTIONS = std.mem.zeroes(OPTIONS),
    oldcur: [*c]P = null,
    oldtop: [*c]P = null,
    err: [*c]P = null,
    current_dir: [*c]u8 = null,
    shell_flag: c_int = 0,
    rdonly: c_int = 0,
    internal: c_int = 0,
    scratch: c_int = 0,
    er: c_int = 0,
    pid: c_int = 0,
    out: c_int = 0,
    vt: ?*anyopaque = null,
    raw: c_int = 0,
    _pad_raw: [4]u8 = std.mem.zeroes([4]u8),
    db: ?*anyopaque = null,
    parseone: ?*const fn (map: [*c]struct_charmap, s: [*c]const u8, rtn_name: [*c][*c]u8, rtn_line: [*c]off_t) callconv(.c) void = null,
};
pub const struct_undorec = opaque {};
pub const UNDOREC = struct_undorec;
pub const struct_kbd = opaque {};
pub const KBD = struct_kbd;
pub const struct_kmap = opaque {};
pub const KMAP = struct_kmap;
pub const struct_bstack = opaque {};
pub const W = struct_window;
const struct_unnamed_3 = extern struct {
    next: [*c]W = null,
    prev: [*c]W = null,
};
pub const struct_screen = extern struct {
    t: ?*anyopaque = null,
    wind: ptrdiff_t = 0,
    topwin: [*c]W = null,
    curwin: [*c]W = null,
    w: ptrdiff_t = 0,
    h: ptrdiff_t = 0,
};
pub const Screen = struct_screen;
pub const struct_watom = extern struct {
    context: [*c]const u8 = null,
    disp: ?*const fn (w: [*c]W, flg: c_int) callconv(.c) void = null,
    follow: ?*const fn (w: [*c]W) callconv(.c) void = null,
    abort: ?*const fn (w: [*c]W) callconv(.c) c_int = null,
    rtn: ?*const fn (w: [*c]W) callconv(.c) c_int = null,
    type: ?*const fn (w: [*c]W, k: c_int) callconv(.c) c_int = null,
    resize: ?*const fn (w: [*c]W, width: ptrdiff_t, height: ptrdiff_t) callconv(.c) void = null,
    move: ?*const fn (w: [*c]W, x: ptrdiff_t, y: ptrdiff_t) callconv(.c) void = null,
    ins: ?*const fn (w: [*c]W, b: [*c]B, l: off_t, n: off_t, flg: c_int) callconv(.c) void = null,
    del: ?*const fn (w: [*c]W, b: [*c]B, l: off_t, n: off_t, flg: c_int) callconv(.c) void = null,
    what: c_int = 0,
};
pub const WATOM = struct_watom;
pub const struct_window = extern struct {
    link: struct_unnamed_3 = std.mem.zeroes(struct_unnamed_3),
    t: [*c]Screen = null,
    x: ptrdiff_t = 0,
    y: ptrdiff_t = 0,
    w: ptrdiff_t = 0,
    h: ptrdiff_t = 0,
    ny: ptrdiff_t = 0,
    nh: ptrdiff_t = 0,
    reqh: ptrdiff_t = 0,
    fixed: ptrdiff_t = 0,
    hh: ptrdiff_t = 0,
    win: [*c]W = null,
    main: [*c]W = null,
    orgwin: [*c]W = null,
    curx: ptrdiff_t = 0,
    cury: ptrdiff_t = 0,
    kbd: ?*KBD = null,
    watom: [*c]const WATOM = null,
    object: ?*anyopaque = null,
    msgt: [*c]const u8 = null,
    msgb: [*c]const u8 = null,
    huh: [*c]const u8 = null,
    notify: [*c]c_int = null,
    bstack: ?*struct_bstack = null,
};
pub const MENU = struct_menu;
pub const struct_menu = extern struct {
    parent: [*c]W = null,
    list: [*c][*c]u8 = null,
    top: ptrdiff_t = 0,
    cursor: ptrdiff_t = 0,
    width: ptrdiff_t = 0,
    fitline: ptrdiff_t = 0,
    perline: ptrdiff_t = 0,
    lines: ptrdiff_t = 0,
    nitems: ptrdiff_t = 0,
    t: [*c]Screen = null,
    h: ptrdiff_t = 0,
    w: ptrdiff_t = 0,
    x: ptrdiff_t = 0,
    y: ptrdiff_t = 0,
    abrt: ?*const fn (w: [*c]W, cursor: ptrdiff_t, object: ?*anyopaque) callconv(.c) c_int = null,
    func: ?*const fn (m: [*c]MENU, cursor: ptrdiff_t, object: ?*anyopaque, k: c_int) callconv(.c) c_int = null,
    backs: ?*const fn (m: [*c]MENU, cursor: ptrdiff_t, object: ?*anyopaque) callconv(.c) c_int = null,
    object: ?*anyopaque = null,
};
pub const struct_bw = extern struct {
    parent: [*c]W = null,
    b: [*c]B = null,
    top: [*c]P = null,
    cursor: [*c]P = null,
    _pad: [456]u8 = std.mem.zeroes([456]u8),
};
pub const BW = struct_bw;
pub const struct_high_syntax = opaque {};
pub const struct_macro = opaque {};
pub const MACRO = struct_macro;
pub const struct_pw = opaque {};
pub const PW = struct_pw;
pub extern fn joe_malloc(size: ptrdiff_t) ?*anyopaque;
pub extern fn joe_free(ptr: ?*anyopaque) void;
pub extern fn mset(d: ?*anyopaque, c: u8, sz: ptrdiff_t) ?*anyopaque;
pub extern fn slen(s: [*c]const u8) ptrdiff_t;
pub extern fn vsncpy(s: [*c]u8, len: ptrdiff_t, blk: [*c]const u8, blklen: ptrdiff_t) [*c]u8;
pub extern fn vsadd(s: [*c]u8, ch: u8) [*c]u8;
pub extern fn vsrm(s: [*c]u8) void;
pub extern fn vatrunc(a: [*c][*c]u8, len: ptrdiff_t) [*c][*c]u8;
pub extern fn _vaset(a: [*c][*c]u8, idx: ptrdiff_t, s: [*c]u8) [*c][*c]u8;
pub extern fn varm(a: [*c][*c]u8) void;
pub extern fn vasort(a: [*c][*c]u8, len: ptrdiff_t) void;
pub extern fn vauniq(a: [*c][*c]u8) void;
pub extern fn pdup(p: [*c]P, tr: [*c]const u8) [*c]P;
pub extern fn pset(d: [*c]P, s: [*c]P) [*c]P;
pub extern fn prm(p: [*c]P) void;
pub extern fn p_goto_eol(p: [*c]P) void;
pub extern fn p_goto_bol(p: [*c]P) void;
pub extern fn pgoto(p: [*c]P, loc: off_t) void;
pub extern fn pgetc(p: [*c]P) c_int;
pub extern fn prgetc(p: [*c]P) c_int;
pub extern fn brch(p: [*c]P) c_int;
pub extern fn piscol(p: [*c]P) off_t;
pub extern fn brvs(p: [*c]P, amnt: off_t) [*c]u8;
pub extern fn bdel(from: [*c]P, to: [*c]P) void;
pub extern fn binsm(p: [*c]P, blk: [*c]const u8, amnt: ptrdiff_t) [*c]P;
pub extern fn binsmq(p: [*c]P, blk: [*c]const u8, amnt: ptrdiff_t) [*c]P;
pub extern fn pwd() [*c]u8;
pub extern fn chpwd(path: [*c]const u8) c_int;
pub extern fn rexpnd(word: [*c]const u8) [*c][*c]u8;
pub extern fn rexpnd_users(word: [*c]const u8) [*c][*c]u8;
pub extern fn rexpnd_cmd_cd(word: [*c]const u8) [*c][*c]u8;
pub extern fn rexpnd_cmd_path(word: [*c]const u8) [*c][*c]u8;
pub extern fn namprt(path: [*c]const u8) [*c]u8;
pub extern fn dirprt(path: [*c]const u8) [*c]u8;
pub extern fn begprt(path: [*c]const u8) [*c]u8;
pub extern fn endprt(path: [*c]const u8) [*c]u8;
pub extern fn isreg(s: [*c]const u8) c_int;
pub extern fn canonical(s: [*c]u8, flags: c_int) [*c]u8;
pub extern fn dequotevs(s: [*c]u8) [*c]u8;
pub extern fn mkmenu(loc: [*c]W, targ: [*c]W, s: [*c][*c]u8, func: ?*const fn (m: [*c]MENU, cursor: ptrdiff_t, object: ?*anyopaque, k: c_int) callconv(.c) c_int, abrt: ?*const fn (w: [*c]W, cursor: ptrdiff_t, object: ?*anyopaque) callconv(.c) c_int, backs: ?*const fn (m: [*c]MENU, cursor: ptrdiff_t, object: ?*anyopaque) callconv(.c) c_int, cursor: ptrdiff_t, object: ?*anyopaque, notify: [*c]c_int) [*c]MENU;
pub extern fn ldmenu(m: [*c]MENU, s: [*c][*c]u8, cursor: ptrdiff_t) void;
pub extern fn mcomplete(m: [*c]MENU) [*c]u8;
pub extern fn wabort(w: [*c]W) c_int;
pub extern fn msgnw(w: [*c]W, s: [*c]const u8) void;
pub extern fn ttflsh() c_int;
pub extern var obuf: [*c]u8;
pub extern var obufp: ptrdiff_t;
pub extern var obufsiz: ptrdiff_t;
inline fn ttputc(c: c_int) void {
    if (obuf == null) return;
    const idx: usize = @intCast(obufp);
    obuf[idx] = @intCast(c);
    obufp += 1;
    if (obufp == obufsiz) _ = ttflsh();
}
